# allegroTries

./: CMakeLists.txt  README.md  gj.c  harun.c  main.c  map1.c  map2.c  my.txt  myinput.c  removecolumn.c
